tests/baselines/reference/parserArrowFunctionExpression16(target=es3).errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
fileJs.js(1,25): error TS8010: Type annotations can only be used in TypeScript files.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== fileJs.js (1 errors) ====
    true ? false ? (param): string => param : null : null // Not legal JS; "Unexpected token ':'" at last colon
                            ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== fileTs.ts (0 errors) ====
    true ? false ? (param): string => param : null : null
    